--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,8 +17,11 @@
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
     "@rainbow-me/rainbowkit": "^1.0.4",
+    "@thirdweb-dev/react": "^3.14.31",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@zoralabs/nft-components": "^1.2.1",
+    "@zoralabs/nft-hooks": "^1.2.1",
     "daisyui": "^2.31.0",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
