--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,6 +23,7 @@
     "@zoralabs/nft-components": "^1.2.1",
     "@zoralabs/nft-hooks": "^1.2.1",
     "daisyui": "^2.31.0",
+    "dayjs": "^1.11.9",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "qrcode.react": "^3.1.0",
